--- a/SyGuS/solvers/cvc5/CMakeLists.txt
+++ b/SyGuS/solvers/cvc5/CMakeLists.txt
@@ -6,11 +6,11 @@ cmake_minimum_required(VERSION 3.2)
 project(cvc4)
 
 set(CVC4_MAJOR   1) # Major component of the version of CVC4.
-set(CVC4_MINOR   9) # Minor component of the version of CVC4.
+set(CVC4_MINOR   8) # Minor component of the version of CVC4.
 set(CVC4_RELEASE 0) # Release component of the version of CVC4.
 
 # Extraversion component of the version of CVC4.
-set(CVC4_EXTRAVERSION "-prerelease")
+set(CVC4_EXTRAVERSION "")
 
 # Shared library versioning. Increment SOVERSION for every new CVC4 release.
 set(CVC4_SOVERSION 7)
